# MetaxScalar

./: .dockerignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  space_config.yaml  validate_env.py  web_api.py
app/: env.py  models.py  server.py  tasks.py
server/: app.py
static/: index.html
