[project]
name = "customer-support-openenv"
version = "0.1.0"
description = "Customer Support OpenEnv Hackathon Project"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"