[project]
name = "customer-support-openenv"
version = "0.1.0"
description = "Customer Support OpenEnv Hackathon Project"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "openenv>=0.1.13"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"